--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -352,6 +352,7 @@
                 @extend %button-shared;
                 border: 1px solid black;
                 background-color: transparent;
+                color: black;
 
                 &:hover {
                     background-color: black;
@@ -405,6 +406,7 @@
                 @extend %button-shared;
                 border: 1px solid black;
                 background-color: transparent;
+                color: black;
 
                 &:hover {
                     background-color: black;
