--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -43,7 +43,7 @@
           <img src="../assets/icons/icon-facebook.svg" alt="facebook icon">
         </a>
         <a href="#">
-          <img src="../assets/icons/X.png" alt="twitter icon">
+          <img ngSrc="assets/icons/X.png" width="30" height="30" alt="X icon">
         </a>
         <a href="#">
           <img src="../assets/icons/icon-instagram.svg" alt="instagram icon">
